--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
   },
   "homepage": "https://github.com/ACMILabs/spotlights#readme",
   "dependencies": {
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
+    "@babel/eslint-parser": "*",
+    "babel-jest": "*",
     "babel-plugin-transform-es2015-modules-commonjs": "*",
-    "eslint": "^7.1.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-flowtype": "^5.1.3",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.13.2",
+    "eslint": "*",
+    "eslint-config-airbnb": "*",
+    "eslint-config-prettier": "*",
+    "eslint-plugin-flowtype": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jest": "*",
     "eslint-plugin-jsx-a11y": "*",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "moment": "^2.26.0",
-    "prettier": "^1.19.1"
+    "eslint-plugin-prettier": "*",
+    "eslint-plugin-react": "*",
+    "moment": "*",
+    "prettier": "*"
   },
   "babel": {
     "plugins": [
